# password-strength-analysis

./: README.md  app.js  index.html  out.json  pyproject.toml  sample_passwords.txt  scan_report.txt  style.css
data/: common_passwords.txt
docs/: CNAME  README.md  setup_guide.md  style.css
scripts/: build_pdf.py
src/password_tool/: __init__.py  cli.py  context.py  entropy.py  generator.py  patterns.py  scanner.py
src/password_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_analyze_json.py  test_entropy.py  test_generator.py  test_patterns.py  test_scanner.py
